# linux-command-flashcards

./: CMakeLists.txt  README.md  commands.csv  profiles.csv
src/: game.cpp  main.cpp
src/headers/: game.h  list.h  main.h  node.h
